feat: migrate to vite
