# backend/src/swagger/openapi.yaml
@@ -207,6 +207,8 @@ components:
         endDate:
           type: string
           format: date
+        price:
+          type: number
         customerId:
           type: string
 
@@ -218,6 +220,8 @@ components:
         firstName:
           type: string
         lastName:
+          type: string
+        email:
           type: string
         dateOfBirth:
           type: string
